forEnersys/DavePkg/objects/Issues_Enhancements__c.object
<CustomObject>
    <fields>
        <fullName>Business_Approval_in_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Approval in Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues_Enhancements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Requirements_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Requirements Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Approved_in_INT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Approved in INT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Approved_in_QA_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Approved in QA - Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Approved_in_QA_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Approved in QA - IT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Created_in_Dev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Created in Dev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Deployed_to_INT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Deployed to INT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Deployed_to_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Deployed to Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Deployed_to_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Deployed to QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Requires_Post_Deployment_Steps__c</fullName>
        <label>Change Requires Post Deployment Steps?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Set_Components__c</fullName>
        <label>Change Set Components</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change_Set_Name__c</fullName>
        <label>Change Set Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deployed to Production</fullName>
                </value>
                <value>
                    <fullName>Abandoned by Business</fullName>
                </value>
                <value>
                    <fullName>Failed in Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues_Enhancements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <inlineHelpText>Please describe in as much detail as necessary the nature of the request.  Feel free to attach any additional documents in the notes and attachments section</inlineHelpText>
        <label>Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <inlineHelpText>Title for this ticket item</inlineHelpText>
        <label>Item Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Man_Hours__c</fullName>
        <description>Estimated hours based on level of effort</description>
        <inlineHelpText>Estimated hours based on level of effort</inlineHelpText>
        <label>Man Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objects_Areas_Affected__c</fullName>
        <description>Select the Objects and Areas/Processes involved in this bug/enhancement</description>
        <inlineHelpText>Select the Objects and Areas/Processes involved in this bug/enhancement</inlineHelpText>
        <label>Objects/Areas Affected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Approval Requests</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Item Groups</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>LOBs</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Price Books</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Quotes</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Tasks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Party_Responsible__c</fullName>
        <description>Who&apos;s owning the change</description>
        <inlineHelpText>Who&apos;s owning the change</inlineHelpText>
        <label>Party Responsible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EnerSys IT</fullName>
                </value>
                <value>
                    <fullName>EnerSys Business</fullName>
                </value>
                <value>
                    <fullName>Summa</fullName>
                </value>
                <value>
                    <fullName>EMEA IT</fullName>
                </value>
                <value>
                    <fullName>EMEA Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Deployment_Steps_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Deployment Steps Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Rate the level of priority for this I&amp;E</description>
        <inlineHelpText>Rate the level of priority for this I&amp;E</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <description>Lookup and select the release that this I&amp;E will be associated with</description>
        <inlineHelpText>Lookup and select the release that this I&amp;E will be associated with</inlineHelpText>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Issues &amp; Enhancements</relationshipLabel>
        <relationshipName>Issues_Enhancements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sizing__c</fullName>
        <label>Sizing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Requirements_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Requirements Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Select the type of request/issue</description>
        <inlineHelpText>Select the type of request/issue</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Issues &amp; Enhancements</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>I_E_by_Status</fullName>
        <columns>NAME</columns>
        <columns>Item_Name__c</columns>
        <columns>Release__c</columns>
        <columns>Type__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>I&amp;E by Status</label>
    </listViews>
    <nameField>
        <displayFormat>I&amp;E: {000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues &amp; Enhancements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_for_Post_Deployment_Steps</fullName>
        <active>true</active>
        <description>At each deploy checkpoint (INT, QA, PROD), if there are post deployment steps required, make sure that the post deployment steps included checkbox is checked.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Change_Requires_Post_Deployment_Steps__c, &quot;Yes&quot;),
Post_Deployment_Steps_Included__c = FALSE,
OR( 
Change_Deployed_to_INT__c = TRUE,
Change_Deployed_to_QA__c = TRUE,
Change_Deployed_to_Production__c = TRUE))</errorConditionFormula>
        <errorDisplayField>Post_Deployment_Steps_Included__c</errorDisplayField>
        <errorMessage>Changes that require post deployment steps must have the post deployment steps included.  Please attach/include them and check the checkbox prior to checking any of the &quot;change deployed&quot; options in the checklist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checklist_Validation_for_Closed_Deployed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c , &quot;Closed&quot;),  
ISPICKVAL( Closed_Reason__c , &quot;Deployed to Production&quot;),
OR( 
Change_Deployed_to_QA__c = FALSE,
Change_Approved_in_QA_IT__c = FALSE,
Change_Approved_in_QA_Business__c = FALSE,
Change_Deployed_to_Production__c = FALSE,
Business_Approval_in_Production__c = FALSE))</errorConditionFormula>
        <errorMessage>Please review the checklist for this ticket and appropriately check items that are complete.  In order to move the status to Closed/Deployed to Production, the last 5 items in the checklist must be complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Reason_Required</fullName>
        <active>true</active>
        <description>If moving to closed, must enter a closed reason</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c , &quot;Closed&quot;), 
ISPICKVAL(Closed_Reason__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Closed_Reason__c</errorDisplayField>
        <errorMessage>When updating the status to Closed you must select a Closed Reason</errorMessage>
    </validationRules>
</CustomObject>